# liuxy

./: .gitattributes  .gitignore  Makefile  README.md  README.tmp-marker  README.tmp-marker2  README.tmp-marker3  README.tmp-marker4  pyproject.toml  requirements.txt
.github/workflows/: apply-sandbox-results.yml  export-raw-voc.yml  extract-unknown-data.yml  import-dataset.yml  sandbox-export-current.yml  sandbox-export.yml  unknown-voc-comparison.yml  unknown-voc-diagnose.yml  unknown-voc-discovery.yml  unknown-voc-experiment.yml  unknown-voc-fast-experiment.yml  unknown-voc-ping.yml
.sandbox/: chunk-00  chunk-01  chunk-02  chunk-03  chunk-04  chunk-05  chunk-06  chunk-07  chunk-08  final-changes.tar.gz.b64  replan.tar.gz.b64  unknown-voc-results.tar.gz.b64
configs/: default.json  feature_diverse.json  unknown_voc_replanned.json
data/: README.md
docs/: EXPERIMENT_HISTORY.md  METHOD.md  RESULTS.md  ROUND6_EXPLORATION.md  UNKNOWN_VOC_REPLAN.md
experiments/: raw_voc_export_trigger.txt  run_unknown_voc_comparison.py  run_unknown_voc_replanned.py  unknown_features_experiment.py.gz.b64
results/: feature_selection_stability.csv  paired_tests.csv  reliable_16seed_rows.csv  reliable_16seed_summary.csv
results/round6/: canonical42_summary.csv  confirm32_paired.csv  confirm32_rows_85001_85008.csv  confirm32_rows_85009_85016.csv  confirm32_rows_86001_86008.csv  confirm32_summary.csv  (+4 more)
runs/: full-unknown-voc-trigger.txt
scripts/: export_feature_template.py  materialize_dataset.py
tests/: test_smoke.py  test_unknown_voc_comparison.py  test_unknown_voc_replanned.py
(+73 files in other folders)
