[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "voc-easyensemble"
version = "1.2.0"
description = "Small-sample VOC classification with fixed and feature-diverse EasyEnsemble models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["joblib>=1.3","numpy>=1.24,<3","pandas>=2.0,<3","scikit-learn>=1.2,<2","scipy>=1.10,<2","tabulate>=0.9,<1"]
[project.optional-dependencies]
dev = ["pytest>=7.4,<9"]
[project.scripts]
voc-easy = "voc_easyensemble.cli:main"
[tool.setuptools]
package-dir = {"" = "src"}
[tool.setuptools.packages.find]
where = ["src"]
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
